<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/settings_layout"
    tools:context=".Activities.UserSettings">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginPageUsernameEditText"
        android:layout_below="@+id/LoginPageUsernameLabel"
        android:layout_alignRight="@+id/login_button"
        android:layout_alignEnd="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/LoginPageSaveUsernameButton"
        android:layout_below="@+id/LoginPageUsernameEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usernameColon"
        android:id="@+id/LoginPageUsernameLabel"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChanges"
        android:id="@+id/saveSettingsButton"
        android:layout_below="@+id/getOwnImagesCheck"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignoreRange"
        android:id="@+id/debugDiscoveryCheckbox"
        android:checked="false"
        android:layout_below="@+id/rangeSeekBar" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discoveryMode"
        android:id="@+id/discoveryModeSwitch"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rangeSeekBar"
        android:layout_below="@+id/rangeSeekBarLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/rangeSeekBarLabel"
        android:layout_below="@+id/discoveryModeSwitch"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reputationColon"
        android:id="@+id/reputationLabel"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/reputationTextView"
        android:layout_below="@+id/reputationLabel"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getOwnImages"
        android:id="@+id/getOwnImagesCheck"
        android:checked="false"
        android:layout_below="@+id/rangeSeekBar"
        android:layout_toRightOf="@id/debugDiscoveryCheckbox"/>

</RelativeLayout>
